added search box and button

--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     <h1>Currency Calculator</h1>
 
     <input type="radio" id="Sports" name="fav_language" value="Sports">
-    <label for="html">HTML</label><br>
+    <label for="html">Sports</label><br>
     <input type="radio" id="Music" name="fav_language" value="Music">
-    <label for="css">CSS</label><br>
+    <label for="css">Music</label><br>
     <input type="radio" id="Other" name="fav_language" value="Other">
-    <label for="javascript">JavaScript</label>
+    <label for="javascript">Other</label>
 
+    <input type="text" class="textBox"/>
+    <button> Search </button>
 
-
-    
 </body>
 </html>
