added links to style and script

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="style" href="assets/style.css">
+    <link rel="script" href="assets/script.js">
     <title>Event Finder</title>
 </head>
 <body>
@@ -18,6 +20,7 @@
 
     <input type="text" class="textBox"/>
     <button> Search </button>
+
 
 </body>
 </html>
