updated link to script

--- a/index.html
+++ b/index.html
@@ -5,22 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="style" href="assets/style.css">
-    <link rel="script" href="assets/script.js">
+    
     <title>Event Finder</title>
 </head>
 <body>
     <h1>Currency Calculator</h1>
 
     <input type="radio" id="Sports" name="fav_language" value="Sports">
-    <label for="html">Sports</label><br>
+    <label for="Sports">Sports</label><br>
     <input type="radio" id="Music" name="fav_language" value="Music">
-    <label for="css">Music</label><br>
+    <label for="Music">Music</label><br>
     <input type="radio" id="Other" name="fav_language" value="Other">
-    <label for="javascript">Other</label>
+    <label for="Other">Other</label>
 
     <input type="text" class="textBox"/>
     <button> Search </button>
 
-
+<script src="script" href="assets/script.js"></script>
 </body>
 </html>
