added radio css

--- a/index.html
+++ b/index.html
@@ -4,24 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<<<<<<< HEAD
-    <link rel="style" href="assets/style.css"/>
-=======
     <link rel="stylesheet" href="assets/style.css">
->>>>>>> 036aa2cac11633518e06fbf89bf794465f8c087a
     
     <title>Event Finder</title>
 </head>
 <body>
     <h1>Event Finder</h1>
-
-    <input type="radio" id="Sports" name="fav_language" value="Sports" id = "sports">
-    <label for="Sports">Sports</label><br>
-    <input type="radio" id="Music" name="fav_language" value="Music" id = "music">
-    <label for="Music">Music</label><br>
-    <input type="radio" id="Other" name="fav_language" value="Other" id = "Other">
-    <label for="Other">Other</label>
-
+    <div class="radio-toolbar">
+        <input type="radio" id="Sports" name="fav_language" value="Sports" id = "sports">
+        <label for="Sports">Sports</label><br>
+        <input type="radio" id="Music"  name="fav_language" value="Music" id = "music">
+        <label for="Music">Music</label><br>
+        <input type="radio" id="Other" name="fav_language" value="Other" id = "Other">
+        <label for="Other">Other</label>
+    </div>
     <input type="text" class="textBox" id="searchBox"/>
     <button id = "search"> Search </button>
     
