radio buttons now work

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="style" href="assets/style.css">
+    <link rel="stylesheet" href="assets/style.css">
     
     <title>Event Finder</title>
 </head>
@@ -18,9 +18,20 @@
     <input type="radio" id="Other" name="fav_language" value="Other">
     <label for="Other">Other</label>
 
-    <input type="text" class="textBox"/>
-    <button> Search </button>
+    <input type="text" class="textBox" id = "searchBar" value= "48423"/>
+    <button id = "searchButton"> Search </button>
 
-<script src="script" href="assets/script.js"></script>
+    <div id= "searchContainer">
+        <article>
+            <p id = "title1"></p>
+            <p id = type1></p>
+            <p id = "dateTime1"></p>
+            <p id = "location1"></p>
+            <p id = "price1"></p>
+            <p></p>
+        </article>
+    </div>
+
+<script src="assets/script.js"></script>
 </body>
 </html>
