added css to search button

--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
     <input type="radio" id="Other" name="fav_language" value="Other">
     <label for="Other">Other</label>
 
+    
+<div class="searchHolder">
     <input type="text" class="textBox"/>
     <button> Search </button>
-
+</div>
 <script src="script" href="assets/script.js"></script>
 </body>
 </html>
