--- a/index.html
+++ b/index.html
@@ -17,11 +17,10 @@
     <label for="Music">Music</label><br>
     <input type="radio" id="Other" name="fav_language" value="Other">
     <label for="Other">Other</label>
-
+    <div id = "searchHolder">
     <input type="text" class="textBox" id = "searchBar" value= "48423"/>
     <button id = "searchButton"> Search </button>
-
-    <div id= "searchContainer">
+    </div>
         <article>
             <p id = "title1"></p>
             <p id = type1></p>
@@ -30,8 +29,6 @@
             <p id = "price1"></p>
             <p></p>
         </article>
-    </div>
-
 <script src="assets/script.js"></script>
 </body>
 </html>
