--- a/index.html
+++ b/index.html
@@ -23,14 +23,9 @@
         <input type="text" class="textBox" id="searchBox"/>
         <button id = "search"> Search </button>
     </p>
-        <article>
-            <p id = "title1"></p>
-            <p id = type1></p>
-            <p id = "dateTime1"></p>
-            <p id = "location1"></p>
-            <p id = "price1"></p>
-            <p></p>
-        </article>
+        <div id= "results">
+            
+        </div>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="assets/script.js"></script>
 </body>
