working exchange for dollar values

--- a/index.html
+++ b/index.html
@@ -21,8 +21,16 @@
     </div>
     <p>
         <input type="text" class="textBox" id="searchBox"/>
-        <button id = "search"> Search </button>
+        <button id = "search"> Search </button> 
+        <select value = "USD" id='moneyPicker'>
+            <option value="USD">USD</option>
+            <option value="CAD">CAD</option>
+            <option value="EUR">EUR</option>
+            <option value="JPY">JPY</option>
+            <option value = "AUD">AUD<option>
+        </select>
     </p>
+    
         <div id= "results">
 
         </div>
